0.7.0
- adds PryRemoteEm.servers and PryRemoteEm.stop_server
- broker can proxy requests to local or remote servers that have registered with it
- all servers will attempt to register with a broker; client will retrieve list of servers from the broker and present a menu to the user by default
- when specifying a specific port to listen on the option :port_fail can be set to :auto; if binding fails attempt to bind on the next port 
- server.run returns a url (String) with the scheme, host and port of the listening server
- json specific parts of wire protocol are abstracted away from client and server
- json proto is a bit more robust: delimeter can be a part of data and CRC is performed

0.6.2
- handle reset command appropriately

0.6.1
- messages are tagged with user that sent them if authentication is being used

0.6.0
- adds shell command support
- adds auth event callbacks
- adds configurable logger

0.5.0
- adds simple messaging with '!' and '!!'

0.4.3
- fixes https://github.com/simulacre/pry-remote-em/issues/26
- fixes https://github.com/simulacre/pry-remote-em/issues/24

0.4.2
- fixes https://github.com/simulacre/pry-remote-em/issues/23

0.4.1
- empty lines don't cause termination

0.4.0
- User/Pass authentication
- TLS support
- Paging support
- Tab completion